add celcius temperature

--- a/index.html
+++ b/index.html
@@ -10,14 +10,17 @@
 
     <div class="location">
         <h1 class="location-timezone">Timezone</h1>
-        <canvas class="icon" width="128" height="128">icon</canvas>
+        <canvas class="icon" width="128" height="128">L</canvas>
     </div>
     <div class="temperature">
+        <div class="temperature-description">Its friggin cold</div>
         <div class="degree-section">
             <h2 class="temperature-degree">34</h2>
             <span>F</span>
+            <span>/</span>
+            <h2 class="temperature-degree-celcius">34</h2>
+            <span>C</span>
         </div>
-        <div class="temperature-description">Its friggin cold</div>
     </div>
     
     <script src="skycons.js"></script>
